# pypagui

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/function/: 01_basic.py  02_missing_annotations.py  03_no_defaults.py  04_long_running.py  05_plotting.py  06_datatypes.py
examples/module/: 01_basic.py
pypagui/: __init__.py  main.py  parameter.py
pypagui/gui/: qt.py  wxpython.py
