[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pypagui"
version = "0.1"
authors = [
    {name = "Philipp Töws"},
]
description = "Automatic Python Parameter GUI Generator"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pyside6",
]

